2009-07-18  Petr Stehlik <pstehlik@sophics.cz>
* configure.ac: patch from Patrice Mandin for gemlib autodetection


2009-06-30  Piotr Fusik  <fox@scene.pl>
  Commiting patch submitted by Tomasz Krasuski <tomasz.krasuski@interia.pl>
* atari_sdl.c, compfile.c: changed "#ifdef linux" to "#ifdef __linux__"


2009-04-18  Perry McFarlane  <perry_m@fastmail.fm>
* sio.c: sio fix broke BINLOAD


2009-04-17  Perry McFarlane  <perry_m@fastmail.fm>
* sio.c: fix sio for AMS music player


2009-03-30  Perry McFarlane  <perry_m@fastmail.fm>
* gtia.c: compile without NEW_CYCLE_EXACT


2009-03-30  Petr Stehlik <pstehlik@sophics.cz>
* atari800.spec: png library added to dependencies.


2009-03-27  Piotr Fusik  <fox@scene.pl>
* win32/atari_win32.c: missing return value in PLATFORM_Initialise
* win32/.cvsignore: atari.res


** 2.1.0 released on 2009-03-27

2009-03-27  Petr Stehlik <pstehlik@sophics.cz>
* atari800.spec: added dependencies to SDL, ncurses, zlib and readline
* debian/control: added dependency to libreadline5-dev
* debian/changelog, debian/atari800.cfg: updated for release
* emuos.{h,lis}: (c) 2005 -> 2009
* DOC/FAQ: updated for release (SDL keyboard joysticks are configurable now)
* DOC/NEWS: yet another update (thanks Piotr for help with final editing)


2009-03-27  Piotr Fusik  <fox@scene.pl>
* DOC/TODO: updated


2009-03-26  Petr Stehlik <pstehlik@sophics.cz>
* DOC/NEWS, DOC/CREDITS, atari800.man, atari.spec, README: release update
* configure.ac, atari.h, util/export: version increased


2009-03-23  Petr Stehlik <pstehlik@sophics.cz>
* DOC/NEWS, DOC/CREDITS: updated for upcoming release
* configure.ac: readline support in monitor enabled by default,
  simple Autoconf readline check added.


2009-03-22  Perry McFarlane  <perry_m@fastmail.fm>
* atari_sdl.c: fix warning
* atari.c: fix basic/curses version compile error
* DOC/TODO: update


2009-03-20  Petr Stehlik <pstehlik@sophics.cz>
  Commiting patch submitted by Tomasz Krasuski <kr0tki@poczta.onet.pl>