@@ -1,3 +1,9 @@
+2009-08-12  Piotr Fusik  <fox@scene.pl>
+  Commiting a modified patch from Magnus Lind <magli143@gmail.com>
+* input.c: fix for trak-ball (cx22) emulation: bits 0 and 3 keep
+  the last direction
+
+
 2009-07-18  Petr Stehlik <pstehlik@sophics.cz>
 * configure.ac: patch from Patrice Mandin for gemlib autodetection
 
